popover bottom spacing fix

--- a/app/assets/stylesheets/_popover.scss
+++ b/app/assets/stylesheets/_popover.scss
@@ -111,6 +111,7 @@
   .updated {
     color:$gray;
     margin-bottom:0;
+    min-height: auto;
   }
   .updated {
     text-align:right;
